--- a/view/index.html
+++ b/view/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="/css/index.css" />
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />    
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDYIRhex5ycocL6uuYWa5ZVf1yxwV-4eDk&sensor=SET_TO_TRUE_OR_FALSE"></script>
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDYIRhex5ycocL6uuYWa5ZVf1yxwV-4eDk&sensor=false"></script>
     <script type="text/javascript">
       function initialize() {
         var myOptions = {
