fixed css path to relative

--- a/view/index.html
+++ b/view/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="/css/index.css" />
+    <link rel="stylesheet" type="text/css" href="css/index.css" />
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />    
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDYIRhex5ycocL6uuYWa5ZVf1yxwV-4eDk&sensor=false"></script>
     <script type="text/javascript">
