fixed jquery gmaps include

--- a/view/index.html
+++ b/view/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDYIRhex5ycocL6uuYWa5ZVf1yxwV-4eDk&sensor=false"></script>
     <script type="text/javascript" src="js/jquery/jquery.min.js"></script>
-    <script type="text/javascript" src="js/jquery/jquery.ui.map.full.js"></script>
+    <script type="text/javascript" src="js/jquery/jquery.ui.map.full.min.js"></script>
     <script type="text/javascript" src="js/calswim.js"></script>
   </head>
   <body onload="initialize()">
