Fixed HTML, removed CSS and broken javascript init call

--- a/view/index.html
+++ b/view/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="js/jquery/jquery.ui.map.full.min.js"></script>
     <script type="text/javascript" src="js/calswim.js"></script>
   </head>
-  <body onload="initialize()">
-    <div id="map_canvas" style="width:100%; height:100%"></div>
+  <body>
+    <div id="map_canvas"></div>
   </body>
 </html>
