--- a/view/css/index.css
+++ b/view/css/index.css
@@ -4,5 +4,23 @@
 
 html { height: 100% }
 body { height: 100%; margin: 0; padding: 0 }
-#map_canvas { height: 100% }
-#search_canvas { position: absolute; z-index: 9999; top:0px; width: 200px; height: 100px;}
+.dark {
+    background: none repeat scroll 0 0 #2A3333;
+    color: #FFFFFF;
+}
+.rounded {
+    border-radius: 8px 8px 8px 8px;
+}
+#header {    
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 99999;
+    height: 50px;
+}
+#map_canvas_wrapper {
+	margin-top: 50px;
+	padding: 10px;
+}
+#map_canvas { width: 100%; height: 400px; margin: auto; }
+#search_canvas {}
