--- a/view/css/index.css
+++ b/view/css/index.css
@@ -11,7 +11,11 @@ body { height: 100%; margin: 0; padding: 0 }
 .rounded {
     border-radius: 8px 8px 8px 8px;
 }
-#header {    
+h1{
+	padding: 0px;
+	margin: 0px;
+}
+#header {  
     position: fixed;
     top: 0;
     width: 100%;
@@ -19,8 +23,17 @@ body { height: 100%; margin: 0; padding: 0 }
     height: 50px;
 }
 #map_canvas_wrapper {
-	margin-top: 50px;
+	margin-top: 65px;
+	padding: 10px;
+	clear:both;
+}
+#map_canvas { 
+	width: 100%;
+	height: 400px;
+	margin: auto;
+}
+#search_canvas {
+	margin-top: 15px;
+	clear:both;
 	padding: 10px;
 }
-#map_canvas { width: 100%; height: 400px; margin: auto; }
-#search_canvas {}
