--- a/view/css/index.css
+++ b/view/css/index.css
@@ -2,8 +2,18 @@
  /* CalSWIM CSS */
 /***************/
 
-html { height: 100% }
-body { height: 100%; margin: 0; padding: 0 }
+/* Elements */
+html {}
+body { 
+	margin: 0;
+	padding: 0
+}
+h1{
+	padding: 0px;
+	margin: 0px;
+}
+
+/* Classes */
 .dark {
     background: none repeat scroll 0 0 #2A3333;
     color: #FFFFFF;
@@ -11,10 +21,8 @@ body { height: 100%; margin: 0; padding: 0 }
 .rounded {
     border-radius: 8px 8px 8px 8px;
 }
-h1{
-	padding: 0px;
-	margin: 0px;
-}
+
+/* IDs */
 #header {  
     position: fixed;
     top: 0;
@@ -36,4 +44,8 @@ h1{
 	margin-top: 15px;
 	clear:both;
 	padding: 10px;
+}
+#footer{
+	margin-top: 15px;
+	clear: both;
 }
