--- a/view/css/index.css
+++ b/view/css/index.css
@@ -6,7 +6,9 @@
 html {}
 body { 
 	margin: 0;
-	padding: 0
+	padding: 0;
+	font-family: arial,sans-serif;
+    font-size: 13px;
 }
 h1{
 	padding: 0px;
@@ -34,8 +36,7 @@ h1{
     height: 50px;
 }
 #map_canvas_wrapper {
-	margin-top: 65px;
-	padding: 10px;
+	margin-top: 65px;	
 	clear:both;
 }
 #map_canvas { 
@@ -43,12 +44,10 @@ h1{
 	height: 400px;
 	margin: auto;
 }
-#search_canvas {
-	margin-top: 15px;
+#search_canvas {	
 	clear:both;
 	padding: 10px;
 }
-#footer{
-	margin-top: 15px;
+#footer{	
 	clear: both;
 }
