--- a/view/css/index.css
+++ b/view/css/index.css
@@ -41,12 +41,11 @@ h1{
 }
 #map_canvas { 
 	width: 100%;
-	height: 400px;
+	height: 100%;
 	margin: auto;
 }
 #search_canvas {	
-	clear:both;
-	padding: 10px;
+	clear:both;	
 }
 #footer{	
 	clear: both;
