--- a/view/css/index.css
+++ b/view/css/index.css
@@ -41,8 +41,13 @@ h1{
 }
 #map_canvas { 
 	width: 100%;
-	height: 100%;
+	height: 70%;
 	margin: auto;
+}
+#table_canvas { 
+    width: 100%;
+    height: 30%;
+    margin: auto;
 }
 #search_canvas {	
 	clear:both;	
