--- a/view/css/index.css
+++ b/view/css/index.css
@@ -9,6 +9,7 @@ body {
 	padding: 0;
 	font-family: arial,sans-serif;
     font-size: 13px;
+    color: #222222;
 }
 h1{
 	padding: 0px;
@@ -24,7 +25,7 @@ h1{
     border-radius: 8px 8px 8px 8px;
 }
 .marker_content{
-	color: #222222;
+	
 }
 
 /* IDs */
@@ -34,6 +35,9 @@ h1{
     width: 100%;
     z-index: 99999;
     height: 50px;
+}
+#upload {
+	float: right;
 }
 #map_canvas_wrapper {
 	margin-top: 65px;	
