Moved form to color box

--- a/view/css/index.css
+++ b/view/css/index.css
@@ -61,3 +61,39 @@ h1{
 #footer{	
 	clear: both;
 }
+
+/* Upload Form CSS */
+#form_hidden_wrapper{
+	display: none;
+}
+#form_wrapper{
+	margin: auto;
+	width: 400px;
+	padding: 15px;                
+}
+fieldset{
+    border-radius: 8px 8px 8px 8px;
+}
+label.error { 
+    float: none;
+    color: red;
+    display: block;
+    clear: both;
+    padding-left: .5em;
+    vertical-align: top;
+}
+#submit{
+    float: right;
+    margin-top: 15px;
+}
+.indent{
+    margin: auto;
+    width: 350px;
+}
+legend{
+    font-size: 12pt;
+}
+input.required, textarea{
+    width: 350px;
+    clear: both;
+}
