--- a/view/css/index.css
+++ b/view/css/index.css
@@ -65,7 +65,6 @@ h1{
 /* Upload Form CSS */
 #form_hidden_wrapper{
 	display: none;
-	overflow: auto;
 }
 #form_wrapper{
 	margin: auto;	
@@ -89,10 +88,12 @@ label.error {
 }
 .indent{
     margin: auto;
+    width: 350px;
 }
 legend{
     font-size: 12pt;
 }
 input.required, textarea{
+    width: 350px;
     clear: both;
 }
