filtered all non alpha-numeric from import data keywords

--- a/view/css/index.css
+++ b/view/css/index.css
@@ -39,7 +39,8 @@ h1{
 #upload {
 	float: right;
 }
-#uppload_message{	
+#uppload_message{
+	display: none;
 }
 #map_canvas_wrapper {
 	margin-top: 65px;	
