Moved textare width to class

--- a/view/css/index.css
+++ b/view/css/index.css
@@ -95,7 +95,7 @@ label.error {
 legend{
     font-size: 12pt;
 }
-input.required, textarea{
+input.required, textarea.upload{
     width: 350px;
     clear: both;
 }
