--- a/view/css/index.css
+++ b/view/css/index.css
@@ -51,12 +51,12 @@ h1{
 	height: 70%;
 	margin: auto;
 }
+#table_canvas_wrapper{
+	width: 100%;
+    height: 30%;    
+}
 #table_canvas { 
-    width: 100%;
-    height: 30%;
-    margin: auto;
-    overflow-x: hidden;
-    overflow-y: auto;
+    
 }
 #search_canvas {	
 	clear:both;	
