--- a/view/css/index.css
+++ b/view/css/index.css
@@ -53,10 +53,11 @@ h1{
 }
 #table_canvas_wrapper{
 	width: 100%;
-    height: 30%;    
+    height: 30%;
 }
 #table_canvas { 
-    
+    width: 100%;
+    height: 100%;
 }
 #search_canvas {	
 	clear:both;	
