--- a/view/css/index.css
+++ b/view/css/index.css
@@ -51,9 +51,13 @@ h1{
 	height: 70%;
 	margin: auto;
 }
+#table_canvas_wrapper{
+	width: 100%;
+    height: 30%;
+}
 #table_canvas { 
     width: 100%;
-    height: 30%;
+    height: 100%;
 }
 #search_canvas {	
 	clear:both;	
