More upload form layout changes

--- a/view/css/index.css
+++ b/view/css/index.css
@@ -96,7 +96,15 @@ label.error {
 legend{
     font-size: 12pt;
 }
-input.required, textarea.upload{
+.full{
     width: 350px;
     clear: both;
+}
+input.half_right {
+	float: right;
+    width: 170px;  
+}
+input.half_left {
+    float: left;
+    width: 170px;  
 }
