--- a/view/css/index.css
+++ b/view/css/index.css
@@ -102,7 +102,7 @@ legend{
 .input_wrapper label{
 	font-weight: bold;
 	font-style: italic;
-	color: #d4d4d4;
+	color: #4d4d4d;
 }
 .full{
     width: 350px;
