--- a/view/css/index.css
+++ b/view/css/index.css
@@ -90,7 +90,10 @@ label.error {
     margin-top: 15px;
 }
 .indent{
+    background-color: #D4D4D4;
+    border-radius: 15px 15px 15px 15px;
     margin: auto;
+    padding: 23px;
     width: 350px;
 }
 legend{
