changing style of upload form

--- a/view/css/index.css
+++ b/view/css/index.css
@@ -94,7 +94,8 @@ label.error {
     margin: auto;
     padding: 23px;
     width: 350px;    
-    background: url("/css/humanity/images/ui-bg_glass_70_ede4d4_1x400.png") repeat-x scroll 50% 50% #EDE4D4;
+    /* background: url("/css/humanity/images/ui-bg_glass_70_ede4d4_1x400.png") repeat-x scroll 50% 50% #EDE4D4; */
+    background-color: #EDE4D4;
     border: 1px solid #CDC3B7;
     color: #3F3731;
     font-weight: normal;
