--- a/view/css/index.css
+++ b/view/css/index.css
@@ -56,7 +56,8 @@ h1{
 }
 #table_canvas { 
     width: 100%;
-    height: 30%;    
+    height: 30%;
+    overflow: auto; 
 }
 #search_canvas {	
 	clear:both;	
