Styling the data_details_wrapper

--- a/view/css/index.css
+++ b/view/css/index.css
@@ -99,6 +99,11 @@ form div.indent{
     color: #3F3731;
     font-weight: normal;
 }
+#data_details_wrapper p{
+    background-color: white;
+    border-radius: 6px 6px 6px 6px;
+    padding: 10px;
+}
 #data_details_wrapper{
 	border-radius: 6px 6px 6px 6px;
     margin: auto;
