--- a/view/css/index.css
+++ b/view/css/index.css
@@ -99,12 +99,12 @@ form div.indent{
     color: #3F3731;
     font-weight: normal;
 }
-#data_details_wrapper p{
+#data_details p{
     background-color: white;
     border-radius: 6px 6px 6px 6px;
     padding: 10px;
 }
-#data_details_wrapper{
+#data_details{
 	border-radius: 6px 6px 6px 6px;
     margin: auto;
     padding: 23px; 
