--- a/view/css/index.css
+++ b/view/css/index.css
@@ -100,6 +100,7 @@ form div.indent{
     font-weight: normal;
 }
 #data_details pre{
+	word-wrap: break-word;
     background-color: white;
     border-radius: 6px 6px 6px 6px;
     padding: 10px;
