--- a/view/css/index.css
+++ b/view/css/index.css
@@ -30,6 +30,9 @@ h1{
 .highlight_input{
 	border: 1px solid #F5AD66;
 }
+.google-visualization-table-table{
+	width: 100%;
+}
 
 /* IDs */
 #header {  
