--- a/view/css/index.css
+++ b/view/css/index.css
@@ -57,7 +57,7 @@ h1{
 #table_canvas { 
     width: 100%;
     height: 30%;
-    overflow: auto; 
+    overflow: hidden; 
 }
 #search_canvas {	
 	clear:both;	
