--- a/view/css/index.css
+++ b/view/css/index.css
@@ -42,7 +42,7 @@ h1{
 	font-family: 'Lucida Fax', monospace;
 	padding: 5px 15px 5px 15px;
 	float: left;
-	clear: both;
+	margin-right: 5px;
 	text-decoration: none;
 	font-weight: bold;
 }
@@ -56,9 +56,6 @@ h1{
     height: 50px;
     background-color: #FFDAB9;
     color: #5E2612;
-}
-#upload {
-	float: right;
 }
 #uppload_message{
 	display: none;
