--- a/view/css/index.css
+++ b/view/css/index.css
@@ -54,8 +54,7 @@ h1{
     width: 100%;
     z-index: 99999;
     height: 50px;
-    background-color: #E9C2A6;
-    color: #E9C2A6;
+    background-color: #FFEFDE;    
 }
 #title{
 	margin-left: 35px;
