--- a/view/css/index.css
+++ b/view/css/index.css
@@ -12,6 +12,7 @@ body {
     color: #222222;
 }
 h1{
+	font-size: 33px;
 	padding: 0px;
 	margin: 0px;
 }
@@ -35,8 +36,8 @@ h1{
 	height: 100%;
 }
 .tab{
-	background-color: #EE4000;
-	color: white;
+	background-color: #FF2F28;
+	color: #FFF6C1;
 	font-size: 10pt;
 	/*font-family: 'Helvetica Neue', Arial, sans-serif;*/
 	font-family: 'Lucida Fax', monospace;
@@ -54,7 +55,8 @@ h1{
     width: 100%;
     z-index: 99999;
     height: 50px;
-    background-color: #FFEFDE;    
+    background-color: #FFF6C1;
+    color: #655241;  
 }
 #title{
 	margin-left: 35px;
