--- a/view/css/index.css
+++ b/view/css/index.css
@@ -77,8 +77,12 @@ h1{
 #search_canvas {	
 	clear:both;	
 }
-#footer{	
+#footer{
+    background-color: #FFF6C1;
+    color: #655241; 
 	clear: both;
+	margin-left: 35px;
+	font-size: 8pt;	
 }
 
 /* Upload Form CSS */
