--- a/view/css/index.css
+++ b/view/css/index.css
@@ -81,7 +81,7 @@ h1{
     background-color: #FFF6C1;
     color: #655241; 
 	clear: both;
-	margin-left: 35px;
+	padding-left: 35px;
 	font-size: 8pt;	
 }
 
