--- a/view/css/index.css
+++ b/view/css/index.css
@@ -58,6 +58,11 @@ h1{
 	margin-left: 35px;
 }
 #title p{
+	-moz-opacity: 1.0 !important;
+    -webkit-opacity: 1.0!important;
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)" !important;
+    filter: alpha(opacity=100) !important;
+    opacity: 1.0 !important;
 	font-family: georgia;
 }
 #uppload_message{
