--- a/view/css/index.css
+++ b/view/css/index.css
@@ -58,11 +58,7 @@ h1{
 	margin-left: 35px;
 }
 #title p{
-	-moz-opacity: 1.0 !important;
-    -webkit-opacity: 1.0!important;
-    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)" !important;
-    filter: alpha(opacity=100) !important;
-    opacity: 1.0 !important;
+	rgba(101, 82, 65, 0.8);
 	font-family: georgia;
 }
 #uppload_message{
