Converted CSS to Sunny

--- a/view/css/index.css
+++ b/view/css/index.css
@@ -113,14 +113,14 @@ label.error {
     margin-top: 15px;
 }
 form div.indent{    
-    border-radius: 6px 6px 6px 6px;
+    /*border-radius: 6px 6px 6px 6px;*/
     margin: auto;
-    padding: 23px;
+    /*padding: 23px;*/
     width: 350px;    
     /* background: url("/css/humanity/images/ui-bg_glass_70_ede4d4_1x400.png") repeat-x scroll 50% 50% #EDE4D4; */
-    background-color: #EDE4D4;
-    border: 1px solid #CDC3B7;
-    color: #3F3731;
+    /*background-color: #EDE4D4;*/
+    /*border: 1px solid #CDC3B7;*/
+    /*color: #3F3731;*/
     font-weight: normal;
 }
 #data_details p{
