--- a/view/css/index.css
+++ b/view/css/index.css
@@ -115,7 +115,7 @@ label.error {
 form div.indent{    
     /*border-radius: 6px 6px 6px 6px;*/
     margin: auto;
-    /*padding: 23px;*/
+    padding: 23px;
     width: 350px;    
     /* background: url("/css/humanity/images/ui-bg_glass_70_ede4d4_1x400.png") repeat-x scroll 50% 50% #EDE4D4; */
     /*background-color: #EDE4D4;*/
