added 3 more colorbox overlays linked to menu items: contact, about, and tools

--- a/view/css/index.css
+++ b/view/css/index.css
@@ -107,7 +107,7 @@ h3{
 #form_hidden_wrapper{
 	display: none;
 }
-#form_wrapper{
+.colorbox_content{
 	margin: auto;	
 	padding: 15px;
 	overflow-x: hidden;
