--- a/view/css/index.css
+++ b/view/css/index.css
@@ -60,7 +60,6 @@ h3{
 /* IDs */
 #header {  
     width: 100%;
-    height: 63px;
     background-color: #FEEEBD; /*#FFF6C1*/
     color: #655241;  
 }
@@ -141,8 +140,10 @@ form div.indent{
     font-weight: normal;
 }
 #data_details p{
-	word-wrap: break-word;    
+	word-wrap: break-word; 
     padding: 10px;
+    margin: 0px;
+    background-color: #FFFFFF;
 }
 .rounded_box{
 	border-radius: 6px 6px 6px 6px;
