--- a/view/css/index.css
+++ b/view/css/index.css
@@ -65,13 +65,15 @@ h3{
 }
 #header_image_wrapper{
     float: right;
-    background: #FEEEBD url("/images/edp_header.png") no-repeat right top;
+    background: #FEEEBD url("/images/edp_header.png") repeat-x right top;
     height: 73px;
-    width: 189px;
+    width: 378px;
     margin-bottom: 10px;
 }
 #menu {
-	margin-left: 35px;
+	bottom: 0;
+    margin-left: 35px;
+    position: absolute;
 }
 #title{
 	width: 470px;
