--- a/view/css/index.css
+++ b/view/css/index.css
@@ -114,8 +114,9 @@ h3{
 	font-size: 8pt;
 	font-variant:small-caps;
     height: 60px;
+    width: 100%;
     bottom: 0px;
-    position: absolute;
+    position: fixed;
 }
 
 /* Upload Form CSS */
