--- a/view/css/index.css
+++ b/view/css/index.css
@@ -28,6 +28,9 @@ h3{
 }
 
 /* Classes */
+.red{
+	color: red;
+}
 .dark {
     background: none repeat scroll 0 0 #2A3333;
     color: #FFFFFF;
@@ -65,9 +68,9 @@ h3{
 }
 #header_image_wrapper{
     float: right;
-    background: #FEEEBD url("/images/edp_header.png") repeat-x right top;
+    background: #FEEEBD url("/images/edp_header.png") no-repeat right top;
     height: 73px;
-    width: 376px;
+    width: 188px;
     margin-bottom: 10px;
 }
 #menu {
