--- a/view/css/index.css
+++ b/view/css/index.css
@@ -93,15 +93,18 @@ h3{
 	margin-top: 65px;	
 	clear:both;
 }
-#map_canvas { 
+#map_canvas { 	
 	width: 100%;
-	height: 70%;
-	margin: auto;
+	height: 100%;
+	/* height: 70%; */
+	margin: auto;	
 }
-#table_canvas { 
+#table_canvas {
+	/*
     width: 100%;
     height: 30%;
-    overflow: hidden; 
+    overflow: hidden;
+    */ 
 }
 #search_canvas {	
 	clear:both;	
