--- a/view/css/index.css
+++ b/view/css/index.css
@@ -102,7 +102,8 @@ h3{
 #table_canvas {
     width: 100%;    
     height: 30%;
-    overflow: hidden;    
+    overflow: hidden;
+    display: none;    
 }
 #search_canvas {	
 	clear:both;	
