--- a/view/css/index.css
+++ b/view/css/index.css
@@ -44,10 +44,11 @@ h3{
 .highlight_input{
 	border: 1px solid #F5AD66;
 }
+/*
 .google-visualization-table-table{
 	width: 100%;
 	height: 100%;
-}
+}*/
 .tab{
 	background-color: #FF4500;
 	color: #FFF6C1;
