added csv details link

--- a/view/css/index.css
+++ b/view/css/index.css
@@ -172,6 +172,7 @@ form div.indent{
 	color: #655241;
     font-variant: small-caps;
     text-decoration: underline;
+    margin-bottom: 10px;
 }
 #data_details {
 	margin-bottom: 200px;
