--- a/view/css/index.css
+++ b/view/css/index.css
@@ -5,31 +5,31 @@
 /* Elements */
 html {}
 body { 
-	margin: 0;
-	padding: 0;
-	font-family: arial,sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: arial,sans-serif;
     font-size: 13px;
     color: #222222;
     background-color: #FEEEBD;
 }
 h1{
-	font-size: 33px;
-	padding: 0px;
-	margin: 0px;
+    font-size: 33px;
+    padding: 0px;
+    margin: 0px;
 }
 h2{
-	color: #655241;
-	font-variant:small-caps;
-	text-decoration: underline;
+    color: #655241;
+    font-variant:small-caps;
+    text-decoration: underline;
 }
 h3{
-	margin: 0px;
-	padding: 0px;	
+    margin: 0px;
+    padding: 0px;
 }
 
 /* Classes */
 .red{
-	color: red;
+    color: red;
 }
 .dark {
     background: none repeat scroll 0 0 #2A3333;
@@ -39,26 +39,31 @@ h3{
     border-radius: 8px 8px 8px 8px;
 }
 .marker_content{
-	
+    
 }
 .highlight_input{
-	border: 1px solid #F5AD66;
+    border: 1px solid #F5AD66;
 }
 /*
 .google-visualization-table-table{
-	width: 100%;
-	height: 100%;
+    width: 100%;
+    height: 100%;
 }*/
 .tab{
-	background-color: #FF4500;
-	color: #FFF6C1;
-	font-size: 10pt;
-	font-family: 'Helvetica Neue', Arial, sans-serif;	
-	padding: 5px 15px 5px 15px;
-	float: left;
-	margin-right: 5px;
-	text-decoration: none;
-	font-weight: bold;
+    background-color: #FF4500;
+    border: 1px solid #FF4500;
+    color: #FFF6C1;
+    font-size: 10pt;
+    font-family: 'Helvetica Neue', Arial, sans-serif;
+    padding: 5px 15px 5px 15px;
+    float: left;
+    margin-right: 5px;
+    text-decoration: none;
+    font-weight: bold;
+}
+.tab:hover{
+    border: 1px solid #FF4500;
+    background-color: #D93B00;
 }
 
 /* IDs */
@@ -75,30 +80,30 @@ h3{
     margin-bottom: 10px;
 }
 #menu {
-	bottom: 0;
+    bottom: 0;
     margin-left: 35px;
     position: absolute;
 }
 #title{
-	width: 470px;
-	margin-left: 35px;
+    width: 470px;
+    margin-left: 35px;
 }
 #title p{
-	rgba(101, 82, 65, 0.8);
-	font-family: georgia;
+    rgba(101, 82, 65, 0.8);
+    font-family: georgia;
 }
 #uppload_message{
-	display: none;
+    display: none;
 }
 #map_canvas_wrapper {
-	margin-top: 65px;	
-	clear:both;
+    margin-top: 65px;
+    clear:both;
 }
-#map_canvas { 	
-	width: 100%;
-	height: 100%;
-	/* height: 70%; */
-	margin: auto;	
+#map_canvas {
+    width: 100%;
+    height: 100%;
+    /* height: 70%; */
+    margin: auto;
 }
 #table_canvas {
     width: 100%;    
@@ -106,58 +111,58 @@ h3{
     overflow: hidden;
     display: none;    
 }
-#table_canvas div div{	
-	overflow: visible !important;
+#table_canvas div div{
+    overflow: visible !important;
 }
 #search_canvas {
-	clear:both;	
+    clear:both;
 }
 #search{
-	padding: 15px 30px 15px 30px;
+    padding: 15px 30px 15px 30px;
 }
 #search_button{
-	font-family: arial,sans-serif;	
-	font-size: 11pt;
-	color: #655241;
+    font-family: arial,sans-serif;
+    font-size: 11pt;
+    color: #655241;
 }
 #footer{
     background-color: #FEEEBD; /*#FFF6C1*/
     color: #655241; 
-	clear: both;
-	padding: 3px;
-	font-size: 7pt;
-	font-variant:small-caps;    
+    clear: both;
+    padding: 3px;
+    font-size: 7pt;
+    font-variant:small-caps;    
     width: 100%;    
 }
 
 /*Contact*/
 .subheader{
-	text-decoration:underline;
-	font-size: 12pt;
-	font-weight: bold;
+    text-decoration:underline;
+    font-size: 12pt;
+    font-weight: bold;
 }
 
 /*About Us*/
 #logos{
-	list-style-type: none;
+    list-style-type: none;
 }
 .list-spacing{
-	margin: 30px 0px 30px 0px;	
+    margin: 30px 0px 30px 0px;
 }
 
 /* Upload Form CSS */
 #form_hidden_wrapper {
-	display: none;
+    display: none;
 }
-#data_file {
-	display: none;
+#data_file, #report_file{
+    display: none;
 }
 .colorbox_content {
-	margin: auto;	
-	padding: 15px;
-	overflow-x: hidden;
-	overflow-y: auto;
-	width: 400px;            
+    margin: auto;
+    padding: 15px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    width: 400px;            
 }
 label.error { 
     float: none;
@@ -182,23 +187,23 @@ form div.indent {
     font-weight: normal;
 }
 .download_details {
-	font-size: 15pt;
-	font-family: arial,sans-serif;
-	color: #655241;    
+    font-size: 15pt;
+    font-family: arial,sans-serif;
+    color: #655241;    
     text-decoration: underline;
     margin-bottom: 10px;
 }
 #data_details {
-	margin-bottom: 200px;
+    margin-bottom: 200px;
 }
 #data_details p {
-	word-wrap: break-word; 
+    word-wrap: break-word; 
     padding: 10px;
     margin: 0px;
     background-color: #FFFFFF;
 }
 .rounded_box {
-	border-radius: 6px 6px 6px 6px;
+    border-radius: 6px 6px 6px 6px;
     margin: auto;
     padding: 23px; 
     background-color: #EDE4D4;
@@ -206,28 +211,28 @@ form div.indent {
     color: #3F3731;
     font-weight: normal;    
 }
-#data_details_wrapper {	
-	overflow: auto;
+#data_details_wrapper {    
+    overflow: auto;
 }
 legend {
     font-size: 12pt;
 }
 .input_wrapper {
-	margin-bottom: 15px;
+    margin-bottom: 15px;
 }
 label {
-	font-weight: bold;
-	font-style: italic;	
+    font-weight: bold;
+    font-style: italic;
 }
 .full {
     width: 350px;
     clear: both;
 }
-input.half {	
+input.half {
     width: 125px;  
 }
 
 /*Login Popup*/
 #login_button{
-	float:right;
+    float:right;
 }
